--- a/ch02_05_event/pom.xml
+++ b/ch02_05_event/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.getset</groupId>
-    <artifactId>ch02_03_prepost</artifactId>
+    <artifactId>ch02_05_event</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -17,11 +17,6 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>4.3.1.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>jsr250-api</artifactId>
-            <version>1.0</version>
         </dependency>
     </dependencies>
 
