ch08-1 Basic Spring JPA example

--- a/ch05_01_start/src/main/resources/application-dev.properties
+++ b/ch05_01_start/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ debug=true
 server.port=8088
 server.context-path=/dev
 
-logging.file=D:/Workspace/test/spring-boot-dev.log
+#logging.file=D:/Workspace/test/spring-boot-dev.log
 
 student.id=1234
 student.name=lisi
