--- a/ch05_01_start/src/main/resources/application-prd.properties
+++ b/ch05_01_start/src/main/resources/application-prd.properties
@@ -1,7 +1,7 @@
 server.port=8080
 server.context-path=/prd
 
-logging.file=D:/Workspace/test/spring-boot-prd.log
+#logging.file=D:/Workspace/test/spring-boot-prd.log
 
 student.id=4321
 student.name=wangwu
